--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,13 @@
         android:layout_width="183dp"
         android:layout_height="207dp"
         android:background="@android:color/holo_purple"
-        android:layout_gravity="top">
+        android:layout_gravity="top"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="104dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <TextView
             android:layout_width="match_parent"
@@ -35,8 +41,10 @@
         android:layout_height="wrap_content"
         android:text="resize"
         android:id="@+id/button"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_marginBottom="62dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -44,7 +52,8 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
         android:id="@+id/textView"
-        android:layout_below="@+id/tt"/>
+        android:layout_below="@+id/tt"
+        android:layout_centerHorizontal="true" />
 
 
 </RelativeLayout>
