--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,13 +26,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true">
 
-        <TextView
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="$$$$"
-            android:textSize="22sp"
-            android:gravity="center"
-            android:layout_margin="33dp"/>
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="22sp"
+                android:gravity="center"
+                android:layout_margin="33dp"/>
+        </ScrollView>
 
     </com.baraccasoftware.gestureview.VerticalScrollingLinearLayout>
 
